--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.2",
+    "gl-react": "^5.2.0",
+    "gl-react-native": "^5.2.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.17.1",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
